<resources>
    <string name="app_name">Covid</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Re-type Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="contact_no">Contact No</string>


    <string name="add_activity">+ Add Activity</string>
    <string name="get_location">Get Location</string>
    <string name="arrival_time">Estimated Arrival Time:</string>
    <string name="close_person">Person/s with Close Contact:</string>
    <string name="name">Name</string>
</resources>
