<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/beige"
    tools:context=".SituationActivity">

    <Button
        android:id="@+id/get_location"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/sunday_ft"
        android:background="@drawable/white_rounded_btn"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:textAllCaps="false"
        android:text="@string/get_location"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrival_time"
        android:fontFamily="@font/sunday_ft"
        android:textSize="16dp"
        android:textColor="@color/gray" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:timePickerMode="spinner"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_person"
        android:fontFamily="@font/sunday_ft"
        android:textSize="16dp"
        android:textColor="@color/gray" />

    <EditText
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:hint="@string/name"
        android:fontFamily="@font/sunday_ft"
        android:textSize="14dp"
        android:textColor="@color/gray"/>

    <EditText
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/contact_no"
        android:fontFamily="@font/sunday_ft"
        android:textSize="14dp"
        android:textColor="@color/gray"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:fontFamily="@font/sunday_ft"
        android:background="@drawable/green_rounded_btn"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:textAllCaps="false"
        android:text="@string/add_activity"/>

</LinearLayout>